--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -155,6 +155,8 @@ jobs:
               --user "${REPO_USER}" \
               --project "${REPO_PROJECT}" \
               --since-tag "${PREV_TAG}" \
+              --due-tag "${TAG}" \
+              --future-release "${TAG}" \
               --output /tmp/changelog.md \
               --no-unreleased \
               --no-issues \
@@ -169,16 +171,6 @@ jobs:
           else
             printf '### Merged Pull Requests\n\n'
             printf 'No pull requests found in this release.\n' >> release-notes.md
-          fi
-
-          printf '\n' >> release-notes.md
-
-          # Add Full Changelog link at the end
-          if [ -n "$PREV_TAG" ] && [ "$PREV_TAG" != "$TAG" ]; then
-            COMPARE_URL="https://github.com/${GITHUB_REPOSITORY}/compare/${PREV_TAG}...${TAG}"
-            printf '\nFull Changelog: [%s...%s](%s)\n' "${PREV_TAG}" "${TAG}" "${COMPARE_URL}" >> release-notes.md
-          else
-            printf '\nFull Changelog: See commit history\n' >> release-notes.md
           fi
 
       - name: Create GitHub Release
