--- a/.github/workflows/monthly-release.yml
+++ b/.github/workflows/monthly-release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # tag=v6.0.1
         with:
-          fetch-depth: 0 # Fetch all history for release notes
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # tag=v6.1.0
@@ -150,22 +150,20 @@ jobs:
             # Generate changelog between previous tag and current tag
             # Use token from environment variable
             export CHANGELOG_GITHUB_TOKEN="${GITHUB_TOKEN}"
-            
+            # This environment variable is the key to stopping the FrozenError in Ruby 3.x
+            export RUBYOPT="--disable-frozen-string-literal"
+
             github_changelog_generator \
               --user "${REPO_USER}" \
               --project "${REPO_PROJECT}" \
               --since-tag "${PREV_TAG}" \
-              --due-tag "${TAG}" \
-              --future-release "${TAG}" \
+              --due-tag "${NEW_TAG}" \
               --output /tmp/changelog.md \
               --no-unreleased \
               --no-issues \
               --pull-requests \
-              --exclude-labels question,duplicate,invalid,wontfix \
-              --header-label "## Merged Pull Requests" \
-              --http-cache \
-              --compare-link \
-              --max-issues 500 || true
+              --header-label "## Merged Pull Requests between ${PREV_TAG} and ${NEW_TAG}" \
+              --exclude-labels question,duplicate,invalid,wontfix
             
             cat /tmp/changelog.md >> release-notes.md
           else
